begin to add my hero image to the restaurant page with some css styling, image not visible on page will need to fix this

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -12,3 +12,10 @@ body {
     font-weight: 300;
     color: #997d02;
 }
+
+#hero-image {
+    background-image: url('../css/hero-image.jpg');
+    background-repeat: no-repeat;  
+    background-position: center;
+    width: 100%;   
+}
